--- a/worked_notebooks/02_numpy_matplotlib.ipynb
+++ b/worked_notebooks/02_numpy_matplotlib.ipynb
@@ -182,6 +182,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mike\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('mike')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
